[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jacek Palczewski <jpalczewski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"
graphene-django = "2.15.*"
psycopg2 = "^2.9.3"
djangorestframework = "^3.13.1"
PyJWT = "^2.3.0"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
