[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jacek Palczewski <jpalczewski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"
psycopg2 = "^2.9.3"
djangorestframework = "^3.13.1"
PyJWT = "^2.3.0"
django-environ = "^0.8.1"
graphene = {git = "https://github.com/graphql-python/graphene", rev = "v3.0.0"}
django-filter = "^21.1"
graphene-django = {git = "https://github.com/graphql-python/graphene-django", rev = "v3.0.0b7"}
uvicorn = {extras = ["standard"], version = "^0.17.6"}
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^6.0.0"}      
[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.1.0"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
