[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    "Michał Stolarczyk",
    "Feliks Olszewski",
    "Marek Stefański",
    "Adam Zalewski",
    "Jacek Palczewski <jpalczewski@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
psycopg2 = "^2.9.3"
djangorestframework = "^3.13.1"
PyJWT = "^2.3.0"
django-environ = "^0.8.1"
graphene = {git = "https://github.com/graphql-python/graphene", rev = "v3.0.0"}
django-filter = "^21.1"
graphene-django = {git = "https://github.com/graphql-python/graphene-django", rev = "f6ec0689c18929344c79ae363d2e3d5628fa4a2d"}
uvicorn = {extras = ["standard"], version = "^0.17.6"}
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^6.0.0"}
django-graphql-jwt = "^0.3.4"
django-configurations = {extras = ["cache", "database", "email", "search"], version = "^2.3.2"}
celery = {extras = ["redis"], version = "^5.2.3"}
redis = "^4.2.1"
watchfiles = "^0.13"
setuptools = "59.6.0"
Pillow = "^9.1.1"
Pygments = "^2.12.0"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
django-extensions = "^3.1.5"
[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.1.0"
factory-boy = "^3.2.1"
Faker = "^13.7.0"
bpython = "^0.22.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
py310 = true
line-length = 88
skip-string-normalization = true
extend-exclude =  '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''


[tool.isort]
profile = "black"
atomic = true
combine_star = true
honor_noqa = true
lines_before_imports = 1
default_section = "THIRDPARTY"
# Headings
import_heading_future = "Future"
import_heading_stdlib = "Standard Library"
import_heading_django = "Django"
import_heading_thirdparty = "3rd-Party"
import_heading_firstparty = "Project"
import_heading_localfolder = "Local"
known_django = "django"
# Order
sections = ["FUTURE","STDLIB","DJANGO","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]


[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
no_strict_optional = true
no_warn_no_return = true
warn_redundant_case = true
allow_untyped_globals = true
allow_redefinition = true
show_error_context = true
show_error_codes = true
show_column_numbers = true
exclude = '''
(?x)
(
    migrations
    | backend/backend
    | backend/manage.py
)
'''

[tool.pycln]
all = true
path = "./backend"
